--- a/blog/templates/auth/login.html.twig
+++ b/blog/templates/auth/login.html.twig
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Главная страница</title>
+    <title>Страница авторизации</title>
 </head>
 <body>
-    <h1>Регистрация!</h1>
-    
+    <h1>Страница авторизации</h1>
+
     <form method="post" action="{{ path('login') }}">
         <label for="login">ЛОГИН:</label>
         <input type="text" name="login" id="login" required>
